[package]
name = "iroha_dsl"
version = "2.0.0-pre-rc.18"
edition = "2021"
authors = ["Yasser"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
litrs = "0.4.0"

[dev-dependencies]
iroha_data_model = { workspace = true }
iroha_crypto = { workspace = true }
iroha_config = { workspace = true }
iroha_client = { workspace = true }
serde_json = "1.0"


