[package]
name = "iroha_dsl"

edition.workspace = true
version.workspace = true
authors.workspace = true

license.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
litrs = "0.4.0"

[dev-dependencies]
iroha_data_model = { workspace = true }
iroha_crypto = { workspace = true }
iroha_config = { workspace = true }
iroha_client = { workspace = true }
serde_json = "1.0"


