[package]
name = "iroha_ffi"
version = "2.0.0-pre-rc.8"
authors = ["Iroha 2 team <https://github.com/orgs/soramitsu/teams/iroha2>"]
edition = "2021"

[features]
# Enables mutable references of non-robust transmutable types in FFI, non-transmutable are always disallowed.
# When handing out non-robust mutable references across FFI, it's possible that the other
# side will modify the given reference and store type's trap representation inside it.
non_robust_ref_mut = []

[dependencies]
iroha_ffi_derive = { version = "=2.0.0-pre-rc.8", path = "derive" }

[dev-dependencies]
getset = "0.1.2"
