[package]
name = "iroha_ffi"

edition.workspace = true
version.workspace = true
authors.workspace = true

license.workspace = true
categories = ["development-tools::ffi"]

[features]
# Enables sharing mutable references of non-robust transmutable types across FFI.
# When handing out non-robust mutable references across FFI, it's possible for the caller
# to modify the given reference and store a trap representation causing immediate UB.
non-robust-ref-mut = []

[dependencies]
iroha_ffi_derive = { version = "=2.0.0-pre-rc.13", path = "derive" }

derive_more = { version = "0.99.17", default-features = false, features = ["display"] }

[dev-dependencies]
webassembly-test = "0.1.0"
getset = "0.1.2"
