[package]
name = "iroha_futures"

edition.workspace = true
version.workspace = true
authors.workspace = true

license.workspace = true

[features]
default = []
# Support lightweight telemetry, including diagnostics
telemetry = ["iroha_futures_derive/telemetry"]

[dependencies]
iroha_config = { version = "=2.0.0-pre-rc.13", path = "../config" }
iroha_futures_derive = { version = "=2.0.0-pre-rc.13", path = "derive" }
iroha_logger = { version = "=2.0.0-pre-rc.13", path = "../logger" }

rand = "0.8.5"
serde_json = "1.0.91"
serde = { version = "1.0.151", features = ["derive"] }
tokio = { version = "1.23.0", features = ["rt", "rt-multi-thread", "macros"] }

[dev-dependencies]
tokio-stream = "0.1.11"
