[package]
name = "iroha_genesis"
version = "2.0.0-pre-rc.16"
authors = ["Iroha 2 team <https://github.com/orgs/soramitsu/teams/iroha2>"]
edition = "2021"

[dependencies]
iroha_config = { workspace = true }
iroha_crypto = { workspace = true }
iroha_data_model = { workspace = true, features = ["http"] }
iroha_logger = { workspace = true }
iroha_primitives = { workspace = true }
iroha_schema = { workspace = true }

derive_more = { workspace = true, features = ["deref"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }
eyre = { workspace = true }
