[package]
name = "iroha_genesis"

edition.workspace = true
version.workspace = true
authors.workspace = true

license.workspace = true

[lints]
workspace = true

[dependencies]
iroha_crypto = { workspace = true }
iroha_data_model = { workspace = true, features = ["http", "transparent_api"] }
iroha_schema = { workspace = true }

parity-scale-codec = { workspace = true, features = ["derive"] }
derive_more = { workspace = true, features = ["deref"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }
eyre = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
iroha_crypto = { workspace = true, features = ["rand"] }
