[package]
name = "iroha"
version = "0.1.0"
authors = [ "Nikita Puzankov <humb1t@yandex.ru>", "Egor Ivkov < <e.o.ivkov@gmail.com>", "Vladislav Markushin <negigic@gmail.com>", "武宮誠 <takemiya@soramitsu.co.jp>" ]
edition = "2018"
description = "Iroha is a straightforward distributed ledger technology (DLT), inspired by Japanese Kaizen principle — eliminate excessiveness (muri). Iroha has essential functionality for your asset, information and identity management needs, at the same time being an efficient and trustworthy crash fault-tolerant tool for your enterprise needs."
readme = "README.md"
homepage = "https://github.com/hyperledger/iroha/tree/iroha2-dev"
repository = "https://github.com/hyperledger/iroha/tree/iroha2-dev"
license = "Apache-2.0"
keywords = ["crypto", "blockchain", "ledger"]
categories = ["cryptography::cryptocurrencies"]

[features]
bridge = []
dex = []
roles = ["iroha_data_model/roles"]
network-mock = ["iroha_network/mock"]
telemetry = []
dev-telemetry = ["iroha_telemetry"]
default = ["bridge"]

[badges]
is-it-maintained-issue-resolution = { repository = "https://github.com/hyperledger/iroha" }
is-it-maintained-open-issues = { repository = "https://github.com/hyperledger/iroha" }
maintenance = { status = "actively-developed" }

[dependencies]
iroha_data_model = { path = "../iroha_data_model", features = ["http_error"] }
iroha_derive = { version = "=0.1.0", path = "../iroha_macro/iroha_derive" }
iroha_macro = { version = "=0.1.0", path = "../iroha_macro" }
iroha_error = { version = "=0.1.0", path = "../iroha_error" }
iroha_network = { version = "=0.1.0", path = "../iroha_network" }
iroha_logger = { version = "=0.1.0", path = "../iroha_logger"}
iroha_crypto = { version = "=0.1.0", path = "../iroha_crypto" }
iroha_http_server = { version = "=0.1.0", path = "../iroha_http_server" }
iroha_version = { version = "=0.1.0", path = "../iroha_version", features = ["http_error"] }
iroha_config = { version = "=0.1.0", path = "../iroha_config" }
chrono = "0.4"
clap = "2.33.0"
futures = { version = "0.3.4" }
parity-scale-codec = { version = "2", features = ["derive"] }
rand = "0.7.3"
ursa = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
heim = { version = "0.1.0-rc.1", features = ["cpu", "memory"] }
tracing = "0.1"
dashmap = { version = "4.0" }
tokio = { version = "1.6.0", features = ["sync", "time", "rt", "io-util", "rt-multi-thread", "macros", "fs"]}
tokio-stream = { version = "0.1.6", features = ["fs"]}
iroha_futures = { path = "../iroha_futures" }
iroha_telemetry = { path = "../iroha_telemetry", optional = true }

[dev-dependencies]
hex-literal = "0.2.1"
tempfile = "3"
criterion = "0.3"
hex = "0.4.0"
unique_port = "0.1.0"
maplit = "1.0.2"

[[bench]]
name = "sumeragi"
harness = false

[[bench]]
name = "validation"
harness = false
