[package]
name = "iroha_actor"
version = "0.1.0"
authors = ["i1i1"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
deadlock_detection = ["petgraph"]

[dependencies]
async-trait = "0.1"
async-std = { version = "1.6.2", features = ["unstable", "attributes"] }
once_cell = "1"
dashmap = "4"
futures = "0.3"
actor_derive = { path = "./actor_derive" }

petgraph = { version = "0.5", optional = true }

[dev-dependencies]
trybuild = "1"
