[package]
name = "iroha_actor"
version = "0.1.0"
authors = ["i1i1"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
deadlock_detection = ["petgraph"]

[dependencies]
async-trait = "0.1"
once_cell = "1"
dashmap = "4"
futures = "0.3"
actor_derive = { path = "./actor_derive" }
tokio = { version = "1.6.0", features = ["sync", "time", "rt", "io-util", "rt-multi-thread"]}

petgraph = { version = "0.5", optional = true }

[dev-dependencies]
trybuild = "1"
tokio = { version = "1.6.0", features = ["macros"]}
