[package]
name = "iroha_client"
version = "0.1.0"
authors = ["Nikita Puzankov <humb1t@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iroha = { path = "../iroha" }
iroha_network = { path = "../iroha_network" }
iroha_derive = { path = "../iroha_macro/iroha_derive" }

[dev-dependencies]
async-std = { version = "1.5", features = ["attributes"] }
criterion = "0.3"
futures = "0.3.4"
tempfile = "3"

[[bench]]
name = "torii"
harness = false
