[package]
name = "iroha_client"
version = "0.1.0"
authors = [ "Nikita Puzankov <humb1t@yandex.ru>", "Egor Ivkov <e.o.ivkov@gmail.com>", "Vladislav Markushin <negigic@gmail.com>", "武宮誠 <takemiya@soramitsu.co.jp>" ]
edition = "2018"
description = "Iroha Client is a Rust Library which encapsulates network related logic and gives users an ability to interact with Iroha Peers like they are non-distributed application."
readme = "README.md"
homepage = "https://github.com/hyperledger/iroha/tree/iroha2-dev"
repository = "https://github.com/hyperledger/iroha/tree/iroha2-dev"
license = "Apache-2.0"
keywords = ["crypto", "blockchain", "ledger", "iroha", "client"]
categories = ["cryptography::cryptocurrencies", "api-bindings"]

[badges]
is-it-maintained-issue-resolution = { repository = "https://github.com/hyperledger/iroha" }
is-it-maintained-open-issues = { repository = "https://github.com/hyperledger/iroha" }
maintenance = { status = "actively-developed" }

[dependencies]
iroha = { version = "=0.1.0", path = "../iroha" }
iroha_network = { version = "=0.1.0", path = "../iroha_network" }
iroha_derive = { version = "=0.1.0", path = "../iroha_macro/iroha_derive" }
iroha_logger = { version = "=0.1.0", path = "../iroha_logger"}
iroha_crypto = { version = "=0.1.0", path = "../iroha_crypto" }
async-std = { version = "1.6", features = ["attributes"] }
ursa = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = { version = "0.4", features = ["std", "serde"] }

[dev-dependencies]
async-trait = "0.1.31"
criterion = "0.3"
cucumber = { package = "cucumber_rust", git = "https://github.com/bbqsrc/cucumber-rust", branch = "feature/async" }
futures = "0.3.4"
port_check = "0.1.5"
tempfile = "3"

[[test]]
name = "cucumber"
harness = false

[[bench]]
name = "torii"
harness = false
