[package]
name = "iroha_client"
version = "0.1.0"
authors = [ "Nikita Puzankov <humb1t@yandex.ru>", "Egor Ivkov <e.o.ivkov@gmail.com>", "Vladislav Markushin <negigic@gmail.com>", "武宮誠 <takemiya@soramitsu.co.jp>" ]
edition = "2018"
description = "Iroha Client is a Rust Library which encapsulates network related logic and gives users an ability to interact with Iroha Peers like they are non-distributed application."
readme = "README.md"
homepage = "https://github.com/hyperledger/iroha/tree/iroha2-dev"
repository = "https://github.com/hyperledger/iroha/tree/iroha2-dev"
license = "Apache-2.0"
keywords = ["crypto", "blockchain", "ledger", "iroha", "client"]
categories = ["cryptography::cryptocurrencies", "api-bindings"]

[badges]
is-it-maintained-issue-resolution = { repository = "https://github.com/hyperledger/iroha" }
is-it-maintained-open-issues = { repository = "https://github.com/hyperledger/iroha" }
maintenance = { status = "actively-developed" }

[dependencies]
iroha_dsl = { version = "=0.1.0", path = "../iroha_dsl" }
iroha_derive = { version = "=0.1.0", path = "../iroha_macro/iroha_derive" }
iroha_logger = { version = "=0.1.0", path = "../iroha_logger"}
iroha_crypto = { version = "=0.1.0", path = "../iroha_crypto" }
iroha_config = { path = "../iroha_config" }
iroha_version = { version = "=0.1.0", path = "../iroha_version" }
iroha_error = { version = "=0.1.0", path = "../iroha_error" }
async-std = { version = "=1.6.2", features = ["attributes"] }
ursa = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
attohttpc = "0.16.3"
http = "0.2.1"
tungstenite = "0.13.0"
tracing = "0.1"
iroha_telemetry = { path = "../iroha_telemetry" }

[dev-dependencies]
iroha = { path = "../iroha", features = ["dev-telemetry", "telemetry"] }
iroha_data_model = { path = "../iroha_data_model" }
async-trait = "0.1.31"
criterion = "0.3"
futures = "0.3.4"
tempfile = "3"
test_network = { path = "../iroha/test_network" }
once_cell = "1.5.2"
iroha_permissions_validators = { version = "=0.1.0", path = "../iroha_permissions_validators" }
rand = "0.7.3"
unique_port = "0.1.0"

[[bench]]
name = "torii"
harness = false
