[package]
name = "iroha_client_cli"
version = "0.1.0"
authors = [ "Nikita Puzankov <humb1t@yandex.ru>", "Egor Ivkov < <e.o.ivkov@gmail.com>", "Vladislav Markushin <negigic@gmail.com>", "武宮誠 <takemiya@soramitsu.co.jp>" ]
edition = "2018"
description = "Iroha CLI Client provides an ability to interact with Iroha Peers Web API without direct network usage. It's a `light` client which only converts Command Line Interface commands into Iroha Web API Network Requests."
readme = "README.md"
homepage = "https://github.com/hyperledger/iroha/tree/iroha2-dev"
repository = "https://github.com/hyperledger/iroha/tree/iroha2-dev"
license = "Apache-2.0"
keywords = ["crypto", "blockchain", "ledger", "iroha", "client"]
categories = ["cryptography::cryptocurrencies", "command-line-utilities"]

[badges]
is-it-maintained-issue-resolution = { repository = "https://github.com/hyperledger/iroha" }
is-it-maintained-open-issues = { repository = "https://github.com/hyperledger/iroha" }
maintenance = { status = "actively-developed" }

[dependencies]
iroha_client = { version = "=0.1.0", path = "../iroha_client" }
iroha_crypto = { version = "=0.1.0", path = "../iroha_crypto" }
iroha_error = { version = "=0.1.0", path = "../iroha_error" }
iroha_dsl = { path = "../iroha_dsl" }
structopt = "0.3"
futures = "0.3.4"
dialoguer = "0.8"
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"
