[package]
name = "iroha_crypto"
version = "0.1.0"
authors = ["Egor Ivkov <e.o.ivkov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ursa = "=0.3.5"
serde = { version = "1.0", features = ["derive"] }
parity-scale-codec = { version = "2", features = ["derive"] }
hex = "0.4.0"
iroha_error = { path = "../iroha_error" }
iroha_schema = { path = "../iroha_schema"}

[dev-dependencies]
hex-literal = "0.2.1"
serde_json = "1.0"
