[package]
name = "iroha_data_model"
version = "0.1.0"
authors = ["Nikita Puzankov <humb1t@yandex.ru>"]
edition = "2018"
description = "Iroha uses a simple data model made up of domains, peers, accounts, assets, signatories, and permissions. This library contains basic data model structures."
readme = "README.md"
homepage = "https://github.com/hyperledger/iroha/tree/iroha2-dev"
repository = "https://github.com/hyperledger/iroha/tree/iroha2-dev"
license = "Apache-2.0"
keywords = ["crypto", "blockchain", "ledger", "iroha", "model"]
categories = ["cryptography::cryptocurrencies", "api-bindings"]

[badges]
is-it-maintained-issue-resolution = { repository = "https://github.com/hyperledger/iroha" }
is-it-maintained-open-issues = { repository = "https://github.com/hyperledger/iroha" }
maintenance = { status = "actively-developed" }

[features]
default = []
roles = []

[dependencies]
iroha_crypto = { path = "../iroha_crypto" }
iroha_derive = { version = "=0.1.0", path = "../iroha_macro/iroha_derive" }
iroha_macro = { version = "=0.1.0", path = "../iroha_macro" }
iroha_schema = { path = "../iroha_schema"}
iroha_version = { version = "=0.1.0", path = "../iroha_version", features = ["warp"] }

eyre = "0.6.5"
fixnum = { version = "0.6", features = ["i64"]}
chrono = "0.4"
dashmap = { version = "4.0" }
parity-scale-codec = { version = "2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.28"

warp = { version = "0.3", default-features = false, optional = true }
