[package]
name = "iroha_futures"
version = "0.1.0"
authors = ["i1i1"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
telemetry = ["futures_derive/telemetry"]

[dependencies]
rand = "0.8"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.6.0", features = ["rt", "rt-multi-thread", "macros"]}
tokio-stream = { version = "0.1.6", features = ["fs"]}
iroha_logger = { path = "../iroha_logger" }
futures_derive = { path = "futures_derive" }
