[package]
name = "iroha_http_server"
version = "0.1.0"
authors = ["Egor Ivkov <e.o.ivkov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
httparse = "1.3.4"
async-tungstenite = "0.8.0"
route-recognizer = "0.2.0"
async-std = { version = "=1.6.2", features = ["attributes","unstable"] }
log = { version = "0.4", features = ["std", "serde"] }
async-trait = "0.1.38"

[dev-dependencies]
attohttpc = "0.15.0"
port_check = "0.1.5"
futures = "0.3.4"
tungstenite = "0.11.0"