[package]
name = "iroha_http_server"
version = "0.1.0"
authors = ["Egor Ivkov <e.o.ivkov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
httparse = "1.3.4"
tokio-tungstenite = "0.14.0"
route-recognizer = "0.2.0"
futures = "0.3.4"
tokio = { version = "1.6.0", features = ["net",  "sync", "time", "rt", "io-util"]}
iroha_error = { version = "=0.1.0", path = "../iroha_error" }
iroha_macro = { version = "=0.1.0", path = "../iroha_macro" }
iroha_derive = { version = "=0.1.0", path = "../iroha_macro/iroha_derive" }
async-trait = "0.1.38"
url = "2.1.1"
serde = "1"
serde_json = "1"
tracing = "0.1"
iroha_logger = { path = "../iroha_logger" }
iroha_futures = { path = "../iroha_futures", features = ["telemetry"] }

[dev-dependencies]
tokio = { version = "1.5.0", features = ["rt-multi-thread", "macros"]}
attohttpc = "0.16.3"
port_check = "0.1.5"
futures = "0.3.4"
tungstenite = "0.13.0"
isahc = "1.0"
