[package]
name = "iroha_logger"
version = "0.1.0"
authors = ["Nikita Puzankov <humb1t@yandex.ru>", "Egor Ivkov < <e.o.ivkov@gmail.com>", "Vladislav Markushin <negigic@gmail.com>", "武宮誠 <takemiya@soramitsu.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.7", features = ["std", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
lazy_static = "1.4.0"
iroha_error = { path = "../iroha_error" }
iroha_config = { path = "../iroha_config" }
