[package]
name = "iroha_logger"
version = "0.1.0"
authors = ["Nikita Puzankov <humb1t@yandex.ru>", "Egor Ivkov <e.o.ivkov@gmail.com>", "Vladislav Markushin <negigic@gmail.com>", "武宮誠 <takemiya@soramitsu.co.jp>"]
edition = "2018"

[dependencies]
chrono = "0.4"
iroha_config = { path = "../iroha_config" }
iroha_error = { path = "../iroha_error" }
once_cell = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-core = "0.1"
tracing-futures = { version = "0.2", default-features = false, features = ["std-future", "std"] }
tracing-subscriber = { version = "0.2", default-features = false, features = ["fmt", "ansi"] }
async-std = { version = "1.6.2", features = ["unstable", "attributes"] }
